--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,17 @@
   font-family: 'Roboto', sans-serif;
 }
 
+p {
+  text-align: justify;
+  max-width: 89%;
+}
+
+#pe {
+  text-align: center;
+  max-width: 100%;
+}
+
+
 :root {
   --primary: #db202c;
   --black: #000000;
@@ -22,6 +33,7 @@ body {
 
 a {
   color: inherit;
+  
 } 
 
 #root {
